# cfv

./: Cargo.toml  README.md
src/: digest.rs  main.rs
test_data/: bxst  uyty
test_data/fmom/: awqz  iqwj  peny  qqhr  rgyt
test_data/fmom/ojoy/: qkzh
test_data/tjee/: mhps  zqpq
