[package]
name = "cfv"
version = "0.1.0"
authors = ["Shantanu Joshi <weemadarthur@yggdrasil.in>"]
description = "Verify file consistency with .sfv files"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.2.0"
data-encoding = "2.2.1"
memmap = "0.7.0"
clap = "2.24.2"
chrono = "0.4.13"
walkdir = "2.3.1"